force-app/main/default/objects/Employee_Time_Card_Day_Entry__c/Employee_Time_Card_Day_Entry__c.object-meta.xml
<CustomObject>
    <label>Employee Time Card Day Entry</label>
    <nameField>
        <displayFormat>ETCEntry-{00000}</displayFormat>
        <label>Employee Time Card Day Entry Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Employee Time Card Day Entries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>