force-app/main/default/objects/Employee_Time_Card_Day_Entry__c/fields/AM_Visits__c.field-meta.xml
<CustomField>
    <fullName>AM_Visits__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Completed visits to HCO accounts (Institution, Pharmacy) on this day.</description>
    <label>AM Visits</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>