force-app/main/default/objects/Employee_Time_Card_Day_Entry__c/fields/Calendar_Working_Days__c.field-meta.xml
<CustomField>
    <fullName>Calendar_Working_Days__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Calendar Working Days</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>