force-app/main/default/objects/Employee_Time_Card_Day_Entry__c/fields/CLM_Visits__c.field-meta.xml
<CustomField>
    <fullName>CLM_Visits__c</fullName>
    <defaultValue>0</defaultValue>
    <label>CLM Visits</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>