force-app/main/default/objects/Employee_Time_Card_Day_Entry__c/fields/Day_Definition__c.field-meta.xml
<CustomField>
    <fullName>Day_Definition__c</fullName>
    <label>Day Definition</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Weekday</fullName>
            </value>
            <value>
                <fullName>Weekend Day</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>