force-app/main/default/objects/Employee_Time_Card_Day_Entry__c/fields/Days_with_Activities__c.field-meta.xml
<CustomField>
    <fullName>Days_with_Activities__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Days with Activities</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>