force-app/main/default/objects/Employee_Time_Card_Day_Entry__c/fields/Employee_Time_Card__c.field-meta.xml
<CustomField>
    <fullName>Employee_Time_Card__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employee Time Card</label>
    <referenceTo>Employee_Time_Card__c</referenceTo>
    <relationshipLabel>Employee Time Card Day Entries</relationshipLabel>
    <relationshipName>Employee_Time_Card_Day_Entries</relationshipName>
    <type>Lookup</type>
</CustomField>