force-app/main/default/objects/Employee_Time_Card_Day_Entry__c/fields/Is_Compliant__c.field-meta.xml
<CustomField>
    <fullName>Is_Compliant__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Compliant</label>
    <type>Checkbox</type>
</CustomField>