force-app/main/default/objects/Employee_Time_Card_Day_Entry__c/fields/No_Activity_Days__c.field-meta.xml
<CustomField>
    <fullName>No_Activity_Days__c</fullName>
    <defaultValue>0</defaultValue>
    <label>No Activity Days</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>