force-app/main/default/objects/Employee_Time_Card_Day_Entry__c/fields/Planned_AM_Visits__c.field-meta.xml
<CustomField>
    <fullName>Planned_AM_Visits__c</fullName>
    <label># Planned AM Visits</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>