force-app/main/default/objects/Employee_Time_Card_Day_Entry__c/fields/Planned_Coaching_Visits__c.field-meta.xml
<CustomField>
    <fullName>Planned_Coaching_Visits__c</fullName>
    <label># Planned Coaching Visits</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>