force-app/main/default/objects/Employee_Time_Card_Day_Entry__c/fields/PM_Visits__c.field-meta.xml
<CustomField>
    <fullName>PM_Visits__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Completed visits to HCP accounts on this day.</description>
    <label>PM Visits</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>