force-app/main/default/objects/Employee_Time_Card_Day_Entry__c/fields/Submitted_Calls__c.field-meta.xml
<CustomField>
    <fullName>Submitted_Calls__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Submitted Calls</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>