force-app/main/default/objects/Employee_Time_Card_Day_Entry__c/fields/Time_off_Days__c.field-meta.xml
<CustomField>
    <fullName>Time_off_Days__c</fullName>
    <label># Time-off Days</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>