force-app/main/default/objects/Employee_Time_Card_Day_Entry__c/fields/TOT_Days_Excluding_Weekends__c.field-meta.xml
<CustomField>
    <fullName>TOT_Days_Excluding_Weekends__c</fullName>
    <defaultValue>0</defaultValue>
    <label>TOT Days Excluding Weekends</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>