force-app/main/default/objects/Employee_Time_Card_Day_Entry__c/fields/Total_Visits__c.field-meta.xml
<CustomField>
    <fullName>Total_Visits__c</fullName>
    <formula>Planned_AM_Visits__c +
Planned_PM_Visits__c +
Unplanned_AM_Visits__c +
Unplanned_PM_Visits__c +
Planned_Coaching_Visits__c +
Unplanned_Coaching_Visits__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label># Total Visits</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>