force-app/main/default/objects/Employee_Time_Card_Day_Entry__c/fields/Unplanned_Coaching_Visits__c.field-meta.xml
<CustomField>
    <fullName>Unplanned_Coaching_Visits__c</fullName>
    <label># Unplanned Coaching Visits</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>